Доделан футер. Извращения с фоновыми линиями застопорились на левой линии.

--- a/index.html
+++ b/index.html
@@ -260,10 +260,10 @@
               <span class="contacts__key contacts__key--phone">Телефон:</span> <span class="contacts__value contacts__value--phone"><a class="contacts__link contacts__link--phone" href="tel:89262461146">+7&nbsp;(926)&nbsp;246-11-46</a></span>
             </p>
             <p class="contacts__text contacts__text--e-mail">
-              <span class="contacts__key contacts__key--e-mail">Email:</span> <span class="contacts__value contacts__value--e-mail"><a class="contacts__link contacts__link--e-mail" href="mailto:milyakov.anton@gmail.com">milyakov.anton@gmail.com</a></span>
+              <span class="contacts__key contacts__key--e-mail">E-mail:</span> <span class="contacts__value contacts__value--e-mail"><a class="contacts__link contacts__link--e-mail" href="mailto:milyakov.anton@gmail.com">milyakov.anton@gmail.com</a></span>
             </p>
             <p class="contacts__text contacts__text--social">
-              <span class="contacts__key contacts__key--social">Соц.сети:</span> <span class="contacts__value contacts__value--social"><a class="contacts__link contacts__link--social" href="#">instagram</a> / <a class="contacts__link contacts__link--social" href="#">vkontakte</a></span>
+              <span class="contacts__key contacts__key--social">Соц. сети:</span> <span class="contacts__value contacts__value--social"><a class="contacts__link contacts__link--social" href="#">instagram</a>&nbsp;&nbsp;/&nbsp;&nbsp;<a class="contacts__link contacts__link--social" href="#">vkontakte</a></span>
             </p>
             <a class="contacts__btn contacts__btn--link" href="contacts-form.html">Форма обратной связи</a>
             <form class="contacts__form" action="#" method="POST">
@@ -288,7 +288,7 @@
           </section>
           <section class="copyright column column--four-quarters">
             <p class="copyright__text">
-              Разработано <a class="copyright__company" href="http://startjulo.ru/" target="_blank">Julo</a>
+              <span class="copyright__key">Разработано</span> <a class="copyright__company" href="http://startjulo.ru/" target="_blank">Julo</a>
             </p>
           </section>
         </div>
