--- a/index.html
+++ b/index.html
@@ -82,12 +82,12 @@
 
     <main>
       <section class="content content--my-experience clearfix" id="my-experience">
-        <div class="container">
-          <div class="container__inner-wrapper clearfix">
+        <div class="container container--my-experience">
+          <div class="container__inner-wrapper container__inner-wrapper--my-experience clearfix">
             <h2 class="content__title content__title--my-experience">Мой опыт</h2>
             <div class="content__column content__column--infographics column column--ten-quarters">
-              <p class="content__text">За <span class="content__number">4</span> года, я провёл <span class="content__number">267</span> мероприятий,
-                 с&nbsp;аудиторией от <span class="content__number">8</span> до <span class="content__number">1500</span> человек.</p>
+              <p class="content__text content__text--infographics">За&nbsp;<span class="content__number">4</span>&nbsp;года, я&nbsp;провёл&nbsp;<span class="content__number">267</span>&nbsp;мероприятий,
+                 с&nbsp;аудиторией от&nbsp;<span class="content__number">8</span>&nbsp;до&nbsp;<span class="content__number">1500</span>&nbsp;человек.</p>
             </div>
             <div class="content__column content__column--channels column column--ten-quarters">
               <p class="content__text content__text--channels">Телеведущий на каналах</p>
@@ -261,7 +261,7 @@
     <footer class="page-footer">
       <div class="container container--footer">
         <div class="container__inner-wrapper clearfix">
-          <section class="contacts column column--thirteen-quarters" id="contacts">
+          <section class="contacts column column--twelve-quarters" id="contacts">
             <h3 class="contacts__text contacts__text--title">Антон Миляков</h3>
             <p class="contacts__text contacts__text--phone">
               <span class="contacts__key contacts__key--phone">Телефон:</span> <span class="contacts__value contacts__value--phone"><a class="contacts__link contacts__link--phone" href="tel:89262461146">+7&nbsp;(926)&nbsp;246-11-46</a></span>
@@ -286,7 +286,7 @@
               <input class="contacts__btn contacts__btn--form" type="submit" value="Отправить">
             </form>
           </section>
-          <section class="partners column column--five-quarters">
+          <section class="partners column column--six-quarters">
             <div class="partners__logo">
               <a class="partners__link" href="http://i-egoist.ru/" target="_blank">
                 <img src="img/logo__footer--i-egoist.png" width="102" height="86" alt="I-Egoist">
