Анимация меню, исправлен баг хедера, баг фоновых линий, сделана плавная прокрутка до якорей

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Миляков</title>
     <link rel="icon" type="image/x-icon" href="img/icon__window--logo.png">
     <link rel="stylesheet" href="css/normalize.css">
@@ -58,9 +59,9 @@
                 </button>
               </form>
             </div>
-            <div class="arrow"></div>
+            <a class="arrow" href="#second-screen"></a>
           </div>
-          <div class="second-screen">
+          <div class="second-screen" id="second-screen">
             <p class="second-screen__text second-screen__text--title">
               Здравствуйте!<br>
               Меня зовут Антон Миляков.
