Смена заголовков в хедере без анимации, поправлен баг в футере установкой z-index секции контакты, реализовано исчезание скроллбара при его ненадобности, поправлены баги при прокрутки хедера

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               </ul>
             </nav>
             <h1 class="page-title">
-              <p class="page-title__role">Ведущий для вашего</p>
+              <p class="page-title__role">Ведущий для <span class="page-title__animated-word">вашего</span></p>
               <p class="page-title__category">Корпоратива</p>
             </h1>
             <div class="phone-block">
