--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                   <input class="phone-block__input phone-block__input--name" id="phone-block__input--name" type="text" name="name" placeholder="Как к вам обратиться?" pattern="^[A-Za-zА-Яа-яЁё\s]+$" required>
                 </label>
                 <label class="phone-block__label phone-block__label--phone" for="phone-block__input--phone">
-                  <input class="phone-block__input phone-block__input--phone" id="phone-block__input--phone" type="text" name="phone" placeholder="Ваш номер" pattern="^[0-9\s()+-]{1,18}$" required>
+                  <input class="phone-block__input phone-block__input--phone" id="phone-block__input--phone" type="tel" name="phone" placeholder="Ваш номер" pattern="^[0-9\s()+-]{1,18}$" required>
                 </label>
                 <button  class="phone-block__btn phone-block__btn--form" id="phone-block__input--btn" type="submit">
                   <p class="phone-block__text phone-block__text--submit">Отправить запрос</p>
@@ -280,7 +280,7 @@
               <label class="contacts__label contacts__label--name" for="contacts__input--name"></label>
               <input class="contacts__input contacts__input--e-mail" id="contacts__input--e-mail" type="e-mail" name="e-mail" placeholder="Введите ваш e-mail">
               <label class="contacts__label contacts__label--e-mail" for="contacts__input--e-mail"></label>
-              <input class="contacts__input contacts__input--phone" id="contacts__input--phone" type="text" name="phone" placeholder="Введите ваш телефон" pattern="^[0-9\s()+-]{1,18}$">
+              <input class="contacts__input contacts__input--phone" id="contacts__input--phone" type="tel" name="phone" placeholder="Введите ваш телефон" pattern="^[0-9\s()+-]{1,18}$">
               <label class="contacts__label contacts__label--phone" for="contacts__input--phone"></label>
               <textarea class="contacts__input contacts__input--message" id="contacts__input--message" rows="6" name="message" placeholder="Введите ваше сообщение" pattern="^.*$"></textarea>
               <label class="contacts__label contacts__label--message" for="contacts__input--message"></label>
