Мой опыт, клиенты, футер, как я работаю в общем сделаны, остались некоторые подравнивания (мобильная версия)

--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
             </div>
             <div class="content__column content__column--channels column column--ten-quarters">
               <p class="content__text content__text--channels">Телеведущий на каналах</p>
-              <div class="content__picture">
+              <div class="content__picture content__picture--match-tv">
                 <img src="img/logo__my-experience--match-tv.png" width="250" height="69" alt="МАТЧ TV">
               </div>
-              <div class="content__picture">
+              <div class="content__picture content__picture--s-tv">
                 <img src="img/logo__my-experience--s-tv.png" width="79" height="70" alt="S TV">
               </div>
             </div>
@@ -280,7 +280,7 @@
               <label class="contacts__label contacts__label--name" for="contacts__input--name"></label>
               <input class="contacts__input contacts__input--e-mail" id="contacts__input--e-mail" type="e-mail" name="e-mail" placeholder="Введите ваш e-mail">
               <label class="contacts__label contacts__label--e-mail" for="contacts__input--e-mail"></label>
-              <input class="contacts__input contacts__input--phone" id="contacts__input--phone" type="tel" name="phone" placeholder="Введите ваш телефон" pattern="^[0-9\s()+-]{1,18}$">
+              <input class="contacts__input contacts__input--phone" id="contacts__input--phone" type="te" name="phone" placeholder="Введите ваш телефон" pattern="^[0-9\s()+-]{1,18}$">
               <label class="contacts__label contacts__label--phone" for="contacts__input--phone"></label>
               <textarea class="contacts__input contacts__input--message" id="contacts__input--message" rows="6" name="message" placeholder="Введите ваше сообщение" pattern="^.*$"></textarea>
               <label class="contacts__label contacts__label--message" for="contacts__input--message"></label>
@@ -292,7 +292,6 @@
               <a class="partners__link" href="http://i-egoist.ru/" target="_blank">
                 <img src="img/logo__footer--i-egoist.png" width="102" height="86" alt="I-Egoist">
               </a>
-              <p class="partners__text">Я одеваюсь здесь!</p>
             </div>
           </section>
           <section class="copyright column column--four-quarters">
