--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
               <a class="partners__link" href="http://i-egoist.ru/" target="_blank">
                 <img src="img/logo__footer--i-egoist.png" width="102" height="86" alt="I-Egoist">
               </a>
+              <p class="partners__text">Я одеваюсь здесь!</p>
             </div>
           </section>
           <section class="copyright column column--four-quarters">
