--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Миляков</title>
     <link rel="icon" type="image/x-icon" href="img/icon__window--logo.png">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <header class="page-header">
@@ -303,6 +303,6 @@
         </div>
       </div>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/script.min.js"></script>
   </body>
 </html>
