Исправлены замечания Кирилла и сделан блок Как я работаю

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                  с&nbsp;аудиторией от&nbsp;<span class="content__number">8</span>&nbsp;до&nbsp;<span class="content__number">1500</span>&nbsp;человек.</p>
             </div>
             <div class="content__column content__column--channels column column--ten-quarters">
-              <p class="content__text content__text--channels">Телеведущий на каналах</p>
+              <p class="content__text content__text--channels">Работаю на телеканалах</p>
               <div class="content__picture content__picture--match-tv">
                 <img src="img/logo__my-experience--match-tv.png" width="250" height="69" alt="МАТЧ TV">
               </div>
@@ -103,9 +103,56 @@
         </div>
       </section>
       <section class="content content--how-i-work" id="how-i-work">
-        <div class="container">
-          <div class="container__inner-wrapper">
+        <div class="container container--how-i-work">
+          <div class="container__inner-wrapper container__inner-wrapper--how-i-work">
             <h2 class="content__title content__title--how-i-work">Как я работаю</h2>
+            <ul class="work-process">
+              <li class="work-process__item">
+                <div class="work-process__picture">
+                  <img src="img/icon__how-i-work--iphone.png" width="143" height="141" alt="Phone">
+                </div>
+                <p class="work-process__text">
+                  <span class="work-process__text--number">1.</span>
+                  <span class="work-process__text--description">Мы созваниваемся и договариваемся о встрече</span>
+                </p>
+              </li>
+              <li class="work-process__item">
+                <div class="work-process__picture">
+                  <img src="img/icon__how-i-work--page.png" width="164" height="142" alt="Page">
+                </div>
+                <p class="work-process__text">
+                  <span class="work-process__text--number">2.</span>
+                  <span class="work-process__text--description">Обсуждаем мероприятие: сочетаем ваши пожелания и мои идеи</span>
+                </p>
+              </li>
+              <li class="work-process__item">
+                <div class="work-process__picture">
+                  <img src="img/icon__how-i-work--check-page.png" width="106" height="130" alt="Check-page">
+                </div>
+                <p class="work-process__text">
+                  <span class="work-process__text--number">3.</span>
+                  <span class="work-process__text--description">Утверждаем сценарий по итогам нашей встречи</span>
+                </p>
+              </li>
+              <li class="work-process__item">
+                <div class="work-process__picture">
+                  <img src="img/icon__how-i-work--man.png" width="110" height="135" alt="Man">
+                </div>
+                <p class="work-process__text">
+                  <span class="work-process__text--number">4.</span>
+                  <span class="work-process__text--description">Я готовлю весь необходимый реквизит для мероприятия</span>
+                </p>
+              </li>
+              <li class="work-process__item">
+                <div class="work-process__picture">
+                  <img src="img/icon__how-i-work--cake.png" width="159" height="149" alt="Cake">
+                </div>
+                <p class="work-process__text">
+                  <span class="work-process__text--number">5.</span>
+                  <span class="work-process__text--description">В день праздника, вы отдыхаете и наслаждаетесь результатом</span>
+                </p>
+              </li>
+            </ul>
           </div>
         </div>
       </section>
